@@ -1,3 +1,7 @@
+2004-07-29  Ben Maurer  <bmaurer@ximian.com>
+
+	* x86/x86-codegen.h: Add opcodes for cmp BYTE PTR [eax], imm
+
 2004-07-28  Zoltan Varga  <vargaz@freemail.hu>
 
 	* amd64/amd64-codegen.h: Ongoing JIT work.
